# ifs_zoom

./: README.md
code/IFSZoom/: IFSZoom.cabal  LICENSE  README.md  barnsley.dhall  config.dhall  sierpinsky.dhall  stack.yaml
code/IFSZoom/app/: IFSConfig.hs  Input.hs  Interactive.hs  Main.hs  Options.hs  SimState.hs
code/IFSZoom/examples/: barnsley.dhall  dragon.ifs  koch_curve.ifs  ribbon.ifs  sierpinsky.dhall  sierpinsky.ifs
code/IFSZoom/src/: Helper.hs  Lib.hs  Pipe.hs
code/IFSZoom/src/Lib/: BinarySearchTree.hs  Camera.hs  ChaosGame.hs  Common.hs  Geometry.hs  Guide.hs  Picture.hs  Random.hs  Sort.hs  Transformation.hs
code/IFSZoom/test/: DocTest.hs
code/IFSZoom/test/Lib/: CameraSpec.hs  ChaosGameSpec.hs  SortSpec.hs
code/explorations/haskell/IFSZoom/: IFSZoom.cabal  README.md  stack.yaml
code/explorations/haskell/IFSZoom/app/: Interactive.hs  Main.hs  Options.hs
code/explorations/haskell/IFSZoom/src/: Helper.hs  Lib.hs  Pipe.hs
code/explorations/haskell/IFSZoom/src/Lib/: Camera.hs  ChaosGame.hs  Common.hs  MortonCode.hs  Picture.hs  Random.hs  Sort.hs
code/explorations/haskell/IFSZoom/test/: Test.hs
code/explorations/haskell/IFSZoom/test/Lib/: CameraSpec.hs  ChaosGameSpec.hs  SortSpec.hs
code/haddock_generated_documentation/: doc-index.html  index.html
code/haddock_generated_documentation/GLURaw-2.0.0.4/: GLURaw.haddock  Graphics-GLU-Callbacks.html  Graphics-GLU-Functions.html  Graphics-GLU-Tokens.html  doc-index.json
code/haddock_generated_documentation/GLUT-2.7.0.15/: GLUT.haddock  GLUT.txt  Graphics-UI-GLUT-Begin.html  Graphics-UI-GLUT-Callbacks-Global.html  Graphics-UI-GLUT-Callbacks-Window.html  Graphics-UI-GLUT-Callbacks.html  Graphics-UI-GLUT-Colormap.html  Graphics-UI-GLUT-Debugging.html  Graphics-UI-GLUT-DeviceControl.html  Graphics-UI-GLUT-Fonts.html  Graphics-UI-GLUT-GameMode.html  Graphics-UI-GLUT-Initialization.html  Graphics-UI-GLUT-Menu.html  Graphics-UI-GLUT-Objects.html  Graphics-UI-GLUT-Overlay.html  Graphics-UI-GLUT-State.html  Graphics-UI-GLUT-Window.html  Graphics-UI-GLUT.html  doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  (+9 more)
code/haddock_generated_documentation/IFSZoom-0.1.0.0/: Helper.html  IFSZoom.haddock  IFSZoom.txt  Lib-Camera.html  Lib-ChaosGame.html  Lib-Common.html  Lib-Geometry.html  Lib-Guide.html  Lib-MortonCode.html  Lib-Picture.html  Lib-Random.html  Lib-Sort.html  Lib-Transformation.html  Lib.html  Pipe.html  doc-index.html  doc-index.json  index.html
code/haddock_generated_documentation/OpenGL-3.0.3.0/: Graphics-Rendering-OpenGL-GL-Antialiasing.html  Graphics-Rendering-OpenGL-GL-BeginEnd.html  Graphics-Rendering-OpenGL-GL-Bitmaps.html  Graphics-Rendering-OpenGL-GL-BufferObjects.html  Graphics-Rendering-OpenGL-GL-Clipping.html  Graphics-Rendering-OpenGL-GL-ColorSum.html  Graphics-Rendering-OpenGL-GL-Colors.html  Graphics-Rendering-OpenGL-GL-CoordTrans.html  Graphics-Rendering-OpenGL-GL-DebugOutput.html  Graphics-Rendering-OpenGL-GL-DisplayLists.html  Graphics-Rendering-OpenGL-GL-Evaluators.html  Graphics-Rendering-OpenGL-GL-Feedback.html  Graphics-Rendering-OpenGL-GL-Fog.html  Graphics-Rendering-OpenGL-GL-Framebuffer.html  Graphics-Rendering-OpenGL-GL-FramebufferObjects-Attachments.html  Graphics-Rendering-OpenGL-GL-FramebufferObjects-FramebufferObjects.html  Graphics-Rendering-OpenGL-GL-FramebufferObjects-Queries.html  Graphics-Rendering-OpenGL-GL-FramebufferObjects-RenderbufferObjects.html  Graphics-Rendering-OpenGL-GL-Hints.html  Graphics-Rendering-OpenGL-GL-LineSegments.html  Graphics-Rendering-OpenGL-GL-PerFragment.html  Graphics-Rendering-OpenGL-GL-PixelRectangles-ColorTable.html  Graphics-Rendering-OpenGL-GL-PixelRectangles-Convolution.html  Graphics-Rendering-OpenGL-GL-PixelRectangles-Histogram.html  Graphics-Rendering-OpenGL-GL-PixelRectangles-Minmax.html  Graphics-Rendering-OpenGL-GL-PixelRectangles-PixelMap.html  Graphics-Rendering-OpenGL-GL-PixelRectangles-PixelStorage.html  Graphics-Rendering-OpenGL-GL-PixelRectangles-PixelTransfer.html  Graphics-Rendering-OpenGL-GL-PixelRectangles-Rasterization.html  Graphics-Rendering-OpenGL-GL-PixellikeObject.html  Graphics-Rendering-OpenGL-GL-Points.html  Graphics-Rendering-OpenGL-GL-Polygons.html  Graphics-Rendering-OpenGL-GL-PrimitiveMode.html  Graphics-Rendering-OpenGL-GL-QueryObjects.html  Graphics-Rendering-OpenGL-GL-RasterPos.html  Graphics-Rendering-OpenGL-GL-ReadCopyPixels.html  Graphics-Rendering-OpenGL-GL-Rectangles.html  Graphics-Rendering-OpenGL-GL-Selection.html  Graphics-Rendering-OpenGL-GL-Shaders-Attribs.html  Graphics-Rendering-OpenGL-GL-Shaders-Limits.html  (+28 more)
code/haddock_generated_documentation/OpenGLRaw-3.3.4.0/: Graphics-GL-AMD-BlendMinmaxFactor.html  Graphics-GL-AMD-DebugOutput.html  Graphics-GL-AMD-DepthClampSeparate.html  Graphics-GL-AMD-DrawBuffersBlend.html  Graphics-GL-AMD-FramebufferMultisampleAdvanced.html  Graphics-GL-AMD-FramebufferSamplePositions.html  Graphics-GL-AMD-GPUShaderHalfFloat.html  Graphics-GL-AMD-GPUShaderInt64.html  Graphics-GL-AMD-InterleavedElements.html  Graphics-GL-AMD-MultiDrawIndirect.html  Graphics-GL-AMD-NameGenDelete.html  Graphics-GL-AMD-OcclusionQueryEvent.html  (+574 more)
docs/: ideas.org
docs/meeting_notes/: 2020-05-08.org  2020-05-08.tex
docs/papers/: Fractals Everwhere - Michael Barnsley.txt
ifs_zoom/: Cargo.toml
paper/: bibliography.bib  georgia.1493pk  georgia.720pk  georgia.840pk  georgia.afm  report.aux  report.bbl  report.bcf  report.blg  report.fdb_latexmk  report.fls  report.org  report.out  report.run.xml  report.tdo  report.tex  report.toc  ttfonts.map
paper/auto/: bibliography.el  report.el
paper/figures/: barnsley_colorized.xcf
paper/listings/: barnsley_fern.ifs
paper/rugscriptie/: georgia.tfm
presentation/: attributions.txt
(+328 files in other folders)
