name:                   IFSZoom
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/Qqwy/IFSZoom#readme
license:                BSD3
license-file:           LICENSE
author:                 Wiebe-Marten Wijnja
maintainer:             w-m@wmcode.nl
copyright:              MIT
category:               university
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

flag llvm-cpu
  description:          Enable the LLVM backend for multicore CPUs
  default:              True

flag llvm-ptx
  description:          Enable the LLVM backend for NVIDIA CUDA GPUs
  default:              True

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  exposed-modules:
      Lib
    , Pipe
    , Lib.Camera
    , Lib.ChaosGame
    , Lib.Common
    , Lib.Geometry
    , Lib.Guide
    , Lib.MortonCode
    , Lib.Picture
    , Lib.Random
    , Lib.Sort
    , Lib.Transformation
    , Helper

  build-depends:
        base                        >= 4.7 && < 5
      , microlens-platform
      , accelerate                  >= 1.0
      , colour-accelerate
      , linear
      , linear-accelerate
      , gloss
      , Glob == 0.10.*

executable IFSZoom-exe
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs

  other-modules:
      Options
    , Interactive
    , IFSConfig

  build-depends:
        base
      , IFSZoom
      , microlens-platform
      , random
      , accelerate
      , accelerate-io
      , gloss-accelerate
      , gloss
      , optparse-applicative >= 0.14
      , mwc-random-accelerate
      , dhall >= 1.33
      , text
  ghc-options:
      -O2
      -threaded
      -rtsopts

  if flag(llvm-cpu)
    cpp-options:
        -DACCELERATE_LLVM_NATIVE_BACKEND

    build-depends:
        accelerate-llvm-native      >= 1.0

  if flag(llvm-ptx)
    cpp-options:
        -DACCELERATE_LLVM_PTX_BACKEND

    build-depends:
        accelerate-llvm-ptx         >= 1.0

-- test-suite IFSZoom-test
--   default-language:     Haskell2010
--   type:                 exitcode-stdio-1.0
--   hs-source-dirs:       test
--   main-is:              Test.hs

--   build-depends:
--         base
--       , IFSZoom

--   ghc-options:
--       -O2
--       -threaded
--       -rtsopts

test-suite doctest
  build-depends:
        base
      , doctest == 0.16.*
      , Glob == 0.10.*
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          DocTest.hs

  ghc-options:
      -O2
      -threaded
      -rtsopts

test-suite hspec
  build-depends:
        base
      , hspec
      , hspec-discover
      , QuickCheck
      , accelerate
      , accelerate-llvm
      , accelerate-llvm-native
      , accelerate-llvm-ptx
      , linear
      , IFSZoom
  other-modules:
        Lib.SortSpec
      , Lib.CameraSpec
      , Lib.ChaosGameSpec
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs

  ghc-options:
      -O2
      -threaded
      -rtsopts



source-repository head
  type:     git
  location: https://github.com/Qqwy/IFSZoom

-- vim: nospell